snander (1.7.8-1) UNRELEASED; urgency=medium

  * Update libusb version to v1.0.27.
  * Add GD25F256F SPI NOR Flash support.
  * Add W25Q64JVIM/W25Q64JWIM SPI NOR Flash support.
  * Add MX25L4005A SPI NOR Flash support.
  * Add MX25U Series SPI NOR Flash support.
  * Add -k option to skip BAD blocks or pages when reading and writing NAND flash.
  * Add M25P05/M25P10/M25P20/M25P40/M25P80/M25P32/M25P64/N25Q016A/N25Q512A SPI NOR Flash support.
  * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
  * Add some SPI NOR Flash from EXCELSEMI/ONSEMI/ZETTA/PCT Manufacturers.
  * Add MXIC MX35LF1G24AD/MX35LF2G24AD/MX35LF4G24AD/MX35LF2G24AD-Z4I8/MX35LF4G24AD-Z4I8 SPI NAND Flash support.
  * Add MXIC MX35LF2G14AC/MX35UF1GE4AD/MX35UF2GE4AD/MX35UF4GE4AD SPI NAND Flash support.
  * Add GigaDevice GD5F2GQ5UE/GD5F2GQ5RE/GD5F2GQ4UA SPI NAND Flash support.
  * Add HEYANG HYF2GQ4UTACAE SPI NAND Flash support.
  * Add MICRON MT29F1G01AA/MT29F2G01AA/MT29F4G01AA SPI NAND Flash support.
  * Add WINBOND W25N01GW/W25N04KV SPI NAND Flash support.
  * Add FORESEE FS35ND01GS1Y2 SPI NAND Flash support.
  * Add DS DS35M1GA/DS35M2GA SPI NAND Flash support.
  * Add ESMT F50D1G41LB(2M) SPI NAND Flash support.
  * Add XTX XT26G02C SPI NAND Flash support.
  * Add FM FM25S02A SPI NAND Flash support.
  * Fix Warning: dangling pointer to 'tmp' may be used.
  * Fix print size in KB when size is less than 1MB.
  * Fix when SPI_NAND_FLASH_DEBUG is enabled.

 -- McMCC <mcmcc@mail.ru>  Sun, 13 Oct 2024 02:42:31 +0800